--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,13 @@
 
 # Log files
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Package manager lock files (keep pnpm-lock.yaml)
+package-lock.json
+yarn.lock
 
 # Editor directories and files
 .vscode
