--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.8.1",
     "@vercel/analytics": "latest",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
